QuranX.Web/Content/Site.css
/*
	Colors:
		Header border
			hsl(70, 48%, 40%);

		Title bar
			hsl(40, 94.7%, 92.5%);
		Title bar text
			hsl(31, 63.2%, 56.3%);
		Title bar sub text
			hsl(204, 100%, 51.5%);

		H1
			hsl(69, 39.2%, 44.5%);
		H2
			hsl(69, 41.4%, 48.8%);
		H3+
			hsl(67, 45.7%, 61.0%);

		Striped 1
			hsl(0, 0%, 93.3%);
		Striped 2
			hsl(0, 0%, 100.0%);

		Tab
			hsl(0, 0%, 86.77%);
		Tab text
			hsl(0, 0%, 26.7%);
		Tab selected
			hsl(67, 45.7%, 61.0%);
		Tab text hover/active
			hsl(70, 48%, 40%);

		Link hover/active
			hsl(67, 46%, 61%);
			
		Highlight
			hsl(69, 99.2%, 54.5%);
		Highlight text
			hsl(0, 0%, 26.7%);
*/
:root {
	box-sizing: border-box;
}

*, ::before, ::after {
	box-sizing: inherit;
}

.highlight {
	/*Col:Highlight*/
	background-color: hsl(69, 99.2%, 54.5%);
	/*Col:Highlight text*/
	color: hsl(0, 0%, 26.7%);
	font-weight: bold;
	padding: 4px 0px;
}
.arabic {
	font-size: 1.5em;
	direction: rtl;
	padding: 0;
	margin: 0;
}

.verse__translation.arabic-container > dd {
	padding: 0em 2rem 0rem 2rem;
	margin: 0.5rem 0 -0.25rem 0;
}

.striped > * {
	/* Col:Striped 1*/
	background-color: hsl(0, 0%, 93.3%);
}

	/* Col:Striped 2*/
	.striped > *:nth-child(2n) {
		background-color: hsl(0, 0%, 100.0%);
	}

.quranx.navbar {
	background-image: url(/Content/Images/HeaderRepeat.jpg);
	font-weight: bold;
	border: none;
}

.quranx.navbar-header {
	background-image: url(/Content/Images/HeaderRepeat.jpg);
}

.quranx.navbar-collapse {
	background-image: url(/Content/Images/HeaderRepeat.jpg);
	border: none;
}

.quranx.navbar-toggle {
	/* Col:H1 */
	background-color: hsl(69, 39.2%, 44.5%);
	color: white;
}

	/* Col:H2 */
	.quranx.navbar-toggle:hover {
		background-color: hsl(69, 41.4%, 48.8%);
		color: white;
	}

	/* Col:H2 */
	.quranx.navbar-toggle:focus {
		background-color: hsl(69, 41.4%, 48.8%);
		color: white;
	}

.navbar a {
	color: white !important;
	text-decoration: none;
}

.hadith-index__list {
	padding: 0;
	list-style: none;
	-webkit-column-count: 1;
	-moz-column-count: 1;
	-ms-column-count: 1;
	column-count: 1;
}

	.hadith-index__list.collapsing {
		transition-duration: 0s;
	}

	.hadith-index__list li {
		margin: 0 2rem;
	}

@media (min-width: 20rem) {
	.hadith-index__list {
		-webkit-column-count: 2;
		-moz-column-count: 2;
		-ms-column-count: 2;
		column-count: 2;
	}
}

@media (min-width: 30rem) {
	.hadith-index__list {
		-webkit-column-count: 3;
		-moz-column-count: 3;
		-ms-column-count: 3;
		column-count: 3;
	}
}

@media (min-width: 40rem) {
	.hadith-index__list {
		-webkit-column-count: 4;
		-moz-column-count: 4;
		-ms-column-count: 4;
		column-count: 4;
	}
}

@media (min-width: 50rem) {
	.hadith-index__list {
		-webkit-column-count: 5;
		-moz-column-count: 5;
		-ms-column-count: 5;
		column-count: 5;
	}
}

@media (min-width: 60rem) {
	.hadith-index__list {
		-webkit-column-count: 6;
		-moz-column-count: 6;
		-ms-column-count: 6;
		column-count: 6;
	}
}

@media (min-width: 70rem) {
	.hadith-index__list {
		-webkit-column-count: 7;
		-moz-column-count: 7;
		-ms-column-count: 7;
		column-count: 7;
	}
}

@media (min-width: 80rem) {
	.hadith-index__list {
		-webkit-column-count: 8;
		-moz-column-count: 8;
		-ms-column-count: 8;
		column-count: 8;
	}
}

@media (min-width: 90rem) {
	.hadith-index__list {
		-webkit-column-count: 9;
		-moz-column-count: 9;
		-ms-column-count: 9;
		column-count: 9;
	}
}

@media (min-width: 100rem) {
	.hadith-index__list {
		-webkit-column-count: 10;
		-moz-column-count: 10;
		-ms-column-count: 10;
		column-count: 10;
	}
}


.chapter-and-verse-selector {
	align-content: center;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 1em;
	width: 100%;
	/*Col:Tab text*/
	color: hsl(0, 0%, 26.7%);
	/*Col:Tab*/
	background-color: hsl(0, 0%, 86.77%) !important;
	padding: 0.5em 1em;
	border-radius: 0.25em;
}

@media (min-width: 768px) {
	.chapter-and-verse-selector {
		width: 740px;
	}
}

.chapter-and-verse-selector .control-label {
	margin-top: 0.75rem;
	vertical-align: middle;
}

.chapter-and-verse-selector__navigator-buttons {
	margin: 0 1.25em;
}

@media (min-width: 768px) {
	.chapter-and-verse-selector__navigator-buttons {
		float: right;
	}
}

.chapter-and-verse-selector__navigator-buttons .btn {
	margin: 4px 0 -4px 0;
	width: 9rem;
	border: 1px solid black;
}

.search__criteria {
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 1em;
	width: 100%;
	/*Col:Tab text*/
	color: hsl(0, 0%, 26.7%);
	/*Col:Tab*/
	background-color: hsl(0, 0%, 86.77%) !important;
	padding: 0.5em 1em;
	border-radius: 0.25em;
	width: 22em;
}

	.search__criteria > *:not(:last-child) {
		margin-bottom: 0.25em;
	}

.search__result-number {
	width: 2em;
	display: inline-block;
}

dl.search__result > dt {
	/* Col:Striped 1*/
	background-color: hsl(0, 0%, 93.3%);
}

.btn.dropdown-toggle {
	/*Col:H2*/
	background-color: hsl(69, 41.4%, 48.8%);
	color: white;
}

.verse-analysis__word-list {
	list-style: none;
	padding: 0;
	margin: 0;
}

	.verse-analysis__word-list > li {
		padding: 0.5em;
		margin: 0;
		margin-bottom: 0.25em;
	}

.verse-analysis__word-text-buckwalter {
	font-variant: small-caps;
	font-weight: bold;
	margin-top: 0.25em;
}

.verse-analysis__word-text-english {
	font-style: italic;
}

.verse-analysis__word-part-list {
	list-style-position: inside;
}

.hadithcollection__collection-list {
	list-style: none;
	padding: 0;
	margin: 0;
}

	.hadithcollection__collection-list > li {
		padding: 0.25em;
	}

.commentary__commentator-list {
	list-style: none;
	padding: 0;
	margin: 0;
}

	.commentary__commentator-list > li {
		padding: 0.25em;
	}

h1, h2, h3, h4, h5, h6 {
	text-align: center;
	padding: 0;
	margin: 0.25em 0;
}

h1 {
	/*Col:H1*/
	color: hsl(69, 39.2%, 44.5%);
}

h2 {
	/*Col:H2*/
	color: hsl(69, 41.4%, 48.8%);
}

h3, h4, h5, h6 {
	/*Col:H3+*/
	color: hsl(67, 45.7%, 61.0%);
}

@media(max-width: 480px) {
	.commentary__commentator-list > li {
		margin-bottom: .25em;
	}
}
/* ... */

